# polymetamorphism

./: .gitmodules  ABOUT.md  Cargo.toml  Makefile  README.md  flag.txt
asm_src/: Makefile  asmwrapper  embedded.c  embedded.nasm  obfuscate.py  shellcode.c
asm_src/encdec_algo/: xtea  xtea.c
asm_src/res/: asmwrapper  obfuscate.py
src/: engine.rs  main.rs  metamorphic.rs  polymorphic.rs  quotes.rs
xpl/: Makefile  dump  dump.i64  morbius  morbius_extract  morbius_old  morbius_rewrite  shellcode.c  shellcode.i64  xpl.py
