[package]
name = "aibohphobia"
version = "0.2.0"
authors = ["Aaron Ti <https://github.com/mcdulltii>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "debuginfo"
opt-level = "s"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
rpath = false

[dependencies]
mmap = "0.1"
object = "0.28.3"
rand="0.8.5"
