[package]
name = "morbius"
version = "0.3.0"
authors = ["Aaron Ti <https://github.com/mcdulltii>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "debuginfo"
opt-level = "s"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
rpath = false

[dependencies]
md5 = "0.7.0"
nix = "0.24.1"
hex-literal = "0.3.4"
blake2 = "0.10.4"
chacha20 = "0.9.0"
mmap = "0.1"
object = "0.28.3"
rand="0.8.5"
